加入部分文章

--- a/content/articles/0001.md
+++ b/content/articles/0001.md
@@ -1,17 +1,48 @@
 ---
-title: 'Quarkus 中文乱码'
-description: 'meta description of the page'
+title: 'Centos7 yum安装JDK1.8'
+description: '在linux centos7 系统中通过yum安装jdk。1.8'
 tags:
-    - 'Quarkus'
-    - 'Kotlin'
-keywords: 'Quarkus quarkus 中文乱码'
-createTime: '2023-03-01'
+    - 'Linux'
+keywords: 'linux centos jdk yum'
+createTime: '2020-09-04'
 ---
 
-# Quarkus 中文乱码
 
-在启动配置的 **Runner** 下面的 **VM Options** 添加
+# Centos7 yum安装JDK1.8
 
+### 检查当前系统是否安装jdk
+
+```shell
+rpm -qa | grep java
 ```
--Dfile.encoding=GB2312
+
+如果没有输入信息表示没有安装，反之若有输出内容，则执行**rpm -e --nodeps ???**进行卸载，问号为输出的信息名。
+
+例如：
+
+```shell
+rpm -e --nodeps java-1.8.0-openjdk-1.8.0.232.b09-0.el7_7.x86_64
 ```
+
+### 查看yum源的java包
+
+```shell
+yum list java*
+```
+
+### 安装jdk1.8
+
+```shell
+yum -y install java-1.8.0-openjdk
+```
+
+等待一会儿。
+
+### 检查是否安装成功
+
+```shell
+java -version
+```
+![演示](/assets/images/2020-09/20200904235134278.png)
+
+显示版本则安装成功，这样的安装方式可以省去手动配置环境变量环节。
