--- a/content/articles/0003.md
+++ b/content/articles/0003.md
@@ -1,41 +1,60 @@
-# Compose 音量控制
+---
+title: 'Vite + TypeScript设置路径别名'
+description: '在linux centos7 系统中安装nginx'
+tags:
+    - 'Vite'
+    - 'TypeScript'
+keywords: 'vite typescript'
+createTime: '2022-08-12'
+---
 
-```kotlin
-val context = LocalContext.current
-    val audioManager = context.getSystemService<AudioManager>()
-    // 获取最大音量
-    val maxVolume = audioManager?.getStreamMaxVolume(AudioManager.STREAM_MUSIC)
-    println("最大音量：" + maxVolume)
+# Vite+TypeScript 设置路径别名
 
-    var currenVolume by remember {
-        mutableStateOf(audioManager?.getStreamVolume(AudioManager.STREAM_MUSIC)!!.toFloat())
+# 前言
+
+Vite 项目中，我们可以手动将**src**路径设置**@**路径别名，可以省下很多引入路径的冗余路径。
+
+（本博文采用 Vite3.X+TypeScript4.6.X 版本）
+
+# 第一步
+
+**vite.config.ts：**
+
+```javascript
+import { defineConfig } from 'vite'
+import vue from '@vitejs/plugin-vue'
+import * as path from 'path' // 需引入
+
+// https://vitejs.dev/config/
+export default defineConfig({
+    plugins: [vue()],
+    resolve: {
+        alias: [{ find: '@', replacement: path.resolve(__dirname, 'src') }] // 设置别名
     }
-
-    Column(
-        horizontalAlignment = Alignment.CenterHorizontally,
-        verticalArrangement = Arrangement.Center,
-        modifier = Modifier
-            .fillMaxWidth()
-            .fillMaxHeight()
-    ) {
-        Text(text = "asd:$currenVolume")
-        Slider(
-            value = currenVolume,
-            valueRange = 0f..15f,
-            steps = 15,
-            onValueChange = {
-                currenVolume = it
-                println(it.toInt())
-
-                audioManager?.setStreamVolume(AudioManager.STREAM_MUSIC, it.toInt(), 2)// flags参数：0无效、1显示控制、2隐式控制
-            },
-            colors = SliderDefaults.colors(
-                inactiveTickColor = Color.Transparent,
-                activeTickColor = Color.Transparent
-            ),
-            modifier = Modifier
-                .width(200.dp)
-                .fillMaxHeight()
-        )
-    }
+})
 ```
+
+# 第二步
+
+**tsconfig.json：**
+
+```json
+{
+    "compilerOptions": {
+        // ...其他配置
+        "types": ["node"],
+        "paths": {
+            "@/*": ["./src/*"]
+        }
+    }
+}
+```
+
+# 使用
+
+```javascript
+// 引入组件
+import HelloWorld from '@/components/HelloWorld.vue'
+```
+
+完工，nice。
