--- a/content/articles/0002.md
+++ b/content/articles/0002.md
@@ -1,21 +1,90 @@
 ---
-title: '测试设置中文'
-description: 'meta description of the page'
+title: 'Centos7 安装Nginx'
+description: '在linux centos7 系统中安装nginx'
 tags:
-    - 'Quarkus'
-    - 'Kotlin'
-keywords: '测试 中文乱码'
-createTime: '2023-03-01'
+    - 'Linux'
+keywords: 'linux centos'
+createTime: '2020-09-07'
 ---
 
-# 测试文章
+# 准备所需环境
 
-## 需要的
+## 安装gcc
 
-这里创建一个 user 对象
-
-```javascript
-const user = {
-    name: '张三'
-}
+```powershell
+yum install gcc-c++
 ```
+安装成功的界面：
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200905000501405.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDU0MDcyMg==,size_16,color_FFFFFF,t_70#pic_center)
+
+## 安装pcre
+
+```powershell
+yum install -y pcre pcre-devel
+```
+安装成功的界面：
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200905000713407.png#pic_left)
+
+## 安装zlib
+
+```powershell
+yum install -y zlib zlib-devel
+```
+安装成功的界面：
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200905001018686.png#pic_left)
+
+## 最后安装openssl
+
+```powershell
+yum install -y openssl openssl-devel
+```
+安装成功的界面：
+![在这里插入图片描述](https://img-blog.csdnimg.cn/2020090500115673.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDU0MDcyMg==,size_16,color_FFFFFF,t_70#pic_left)
+
+## 下载nginx
+进入官网下载nginx。
+[点这里进入官网下载界面](http://nginx.org/en/download.html)
+可以看到很多版本，我们这里选择较新的稳定版。
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200905001412999.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDU0MDcyMg==,size_16,color_FFFFFF,t_70#pic_left)
+下载完成后，将下载好的压缩包移动到 **/usr/local**下，然后解压。
+
+```powershell
+tar -zxvf nginx-1.18.0.tar.gz
+```
+
+## 安装nginx
+解压后切换到安装目录下。
+
+```powershell
+cd /usr/local/nginx/nginx-1.18.0
+```
+然后执行安装：
+
+```powershell
+./configure --prefix=/usr/local/nginx	#配置安装目录
+
+make
+
+make install
+```
+
+## 检测是否安装成功
+进入到上面配置的安装目录
+
+```powershell
+cd /usr/loca/nginx/sbin
+
+./nginx -t
+```
+若输出下图，则安装成功：
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200907145542285.png#pic_left)
+
+## 启动nginx
+在上一步的目录下
+
+```powershell
+./nginx #启动nginx
+```
+访问ip地址：
+
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200907145849432.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDU0MDcyMg==,size_16,color_FFFFFF,t_70#pic_left)
