搬运一些文章

--- a/content/articles/0001.md
+++ b/content/articles/0001.md
@@ -1,16 +1,15 @@
 ---
 title: 'Centos7 yum安装JDK1.8'
-description: '在linux centos7 系统中通过yum安装jdk。1.8'
+description: '在linux centos7 系统中通过yum安装jdk1.8'
 tags:
     - 'Linux'
 keywords: 'linux centos jdk yum'
 createTime: '2020-09-04'
 ---
 
+# Centos7 yum 安装 JDK1.8
 
-# Centos7 yum安装JDK1.8
-
-### 检查当前系统是否安装jdk
+### 检查当前系统是否安装 jdk
 
 ```shell
 rpm -qa | grep java
@@ -24,13 +23,13 @@ rpm -qa | grep java
 rpm -e --nodeps java-1.8.0-openjdk-1.8.0.232.b09-0.el7_7.x86_64
 ```
 
-### 查看yum源的java包
+### 查看 yum 源的 java 包
 
 ```shell
 yum list java*
 ```
 
-### 安装jdk1.8
+### 安装 jdk1.8
 
 ```shell
 yum -y install java-1.8.0-openjdk
@@ -43,6 +42,7 @@ yum -y install java-1.8.0-openjdk
 ```shell
 java -version
 ```
+
 ![演示](/assets/images/2020-09/20200904235134278.png)
 
 显示版本则安装成功，这样的安装方式可以省去手动配置环境变量环节。
