--- a/content/articles/0003.md
+++ b/content/articles/0003.md
@@ -4,7 +4,7 @@ description: '在linux centos7 系统中安装nginx'
 tags:
     - 'Vite'
     - 'TypeScript'
-keywords: 'vite typescript'
+keywords: 'vite typescript ts'
 createTime: '2022-08-12'
 ---
 
