--- a/content/articles/0002.md
+++ b/content/articles/0002.md
@@ -7,9 +7,9 @@ keywords: 'linux centos'
 createTime: '2020-09-07'
 ---
 
-# 准备所需环境
+## 准备所需环境
 
-## 安装 gcc
+### 安装 gcc
 
 ```powershell
 yum install gcc-c++
@@ -18,7 +18,7 @@ yum install gcc-c++
 安装成功的界面：
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200905000501405.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDU0MDcyMg==,size_16,color_FFFFFF,t_70#pic_center)
 
-## 安装 pcre
+### 安装 pcre
 
 ```powershell
 yum install -y pcre pcre-devel
@@ -27,7 +27,7 @@ yum install -y pcre pcre-devel
 安装成功的界面：
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200905000713407.png#pic_left)
 
-## 安装 zlib
+### 安装 zlib
 
 ```powershell
 yum install -y zlib zlib-devel
@@ -36,7 +36,7 @@ yum install -y zlib zlib-devel
 安装成功的界面：
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200905001018686.png#pic_left)
 
-## 最后安装 openssl
+### 最后安装 openssl
 
 ```powershell
 yum install -y openssl openssl-devel
@@ -45,7 +45,7 @@ yum install -y openssl openssl-devel
 安装成功的界面：
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/2020090500115673.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDU0MDcyMg==,size_16,color_FFFFFF,t_70#pic_left)
 
-## 下载 nginx
+### 下载 nginx
 
 进入官网下载 nginx。
 [点这里进入官网下载界面](http://nginx.org/en/download.html)
@@ -57,7 +57,7 @@ yum install -y openssl openssl-devel
 tar -zxvf nginx-1.18.0.tar.gz
 ```
 
-## 安装 nginx
+### 安装 nginx
 
 解压后切换到安装目录下。
 
@@ -75,7 +75,7 @@ make
 make install
 ```
 
-## 检测是否安装成功
+### 检测是否安装成功
 
 进入到上面配置的安装目录
 
@@ -88,7 +88,7 @@ cd /usr/loca/nginx/sbin
 若输出下图，则安装成功：
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200907145542285.png#pic_left)
 
-## 启动 nginx
+### 启动 nginx
 
 在上一步的目录下
 
