修改一些布局

--- a/content/articles/0001.md
+++ b/content/articles/0001.md
@@ -15,6 +15,16 @@ createTime: '2020-09-04'
 rpm -qa | grep java
 ```
 
+::CodeBlock
+
+```java
+String str = "asd";
+// 测试
+str.toString();
+```
+
+::
+
 如果没有输入信息表示没有安装，反之若有输出内容，则执行**rpm -e --nodeps ???**进行卸载，问号为输出的信息名。
 
 例如：
